Add pytest command and update dependencies in setup.py and pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ authors = [
 dependencies = [
     "apache-airflow",
     "duckdb",
-    "pandas"
+    "pandas",
+    "setuptools"
 ]
 
 [project.optional-dependencies]
